修复底部弹框的问题

--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:ems="10"
-        android:hint="请输入旧密码"
+        android:hint="请输入密码"
         android:textSize="20sp"
         android:textColorHint="#bbbbbb"
         android:textColor="#000000"
@@ -47,7 +47,7 @@
         android:inputType="textPassword"
         android:layout_marginTop="8dp"
         android:ems="10"
-        android:hint="请输入新密码"
+        android:hint="请确认密码"
         android:textSize="20sp"
         android:textColorHint="#bbbbbb"
         android:background="#ffffff"
