--- a/app/src/main/res/layout/activity_author.xml
+++ b/app/src/main/res/layout/activity_author.xml
@@ -10,7 +10,7 @@
     <com.miss.imissyou.mycar.ui.TitleFragment
         android:id="@+id/author_title"
         android:layout_width="match_parent"
-        android:layout_height="45dp">
+        android:layout_height="@dimen/title_height">
     </com.miss.imissyou.mycar.ui.TitleFragment>
 
     <!--关于页面-->
