--- a/app/src/main/res/layout/activity_add_newcar.xml
+++ b/app/src/main/res/layout/activity_add_newcar.xml
@@ -9,7 +9,7 @@
     <com.miss.imissyou.mycar.ui.TitleFragment
         android:id="@+id/addnewCar_title"
         android:layout_width="match_parent"
-        android:layout_height="45dp"/>
+        android:layout_height="@dimen/title_height"/>
 
     <!--扫描框-->
     <!--<RelativeLayout-->
