--- a/app/src/main/res/layout/activity_car_and_saft.xml
+++ b/app/src/main/res/layout/activity_car_and_saft.xml
@@ -7,7 +7,7 @@
     <com.miss.imissyou.mycar.ui.TitleFragment
         android:id="@+id/car_and_saft_title"
         android:layout_width="match_parent"
-        android:layout_height="45dp"/>
+        android:layout_height="@dimen/title_height"/>
 
     <LinearLayout
 
