--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -8,7 +8,7 @@
         android:id="@+id/change_password_title"
         android:layout_alignParentTop="true"
         android:layout_width="match_parent"
-        android:layout_height="45dp"/>
+        android:layout_height="@dimen/title_height"/>
 
 
     <Button
