--- a/app/src/main/res/layout/activity_change_phonenumber.xml
+++ b/app/src/main/res/layout/activity_change_phonenumber.xml
@@ -8,7 +8,7 @@
     <com.miss.imissyou.mycar.ui.TitleFragment
         android:id="@+id/changePhone_title"
         android:layout_width="match_parent"
-        android:layout_height="45dp"/>
+        android:layout_height="@dimen/title_height"/>
 
     <LinearLayout
         android:layout_width="match_parent"
