--- a/app/src/main/res/layout/activity_change_username.xml
+++ b/app/src/main/res/layout/activity_change_username.xml
@@ -8,7 +8,7 @@
         android:id="@+id/change_username_title"
         android:layout_alignParentTop="true"
         android:layout_width="match_parent"
-        android:layout_height="45dp"/>
+        android:layout_height="@dimen/title_height"/>
     <EditText
         android:id="@+id/change_username_input"
         android:layout_width="match_parent"
