--- a/app/src/main/res/layout/activity_findpassword.xml
+++ b/app/src/main/res/layout/activity_findpassword.xml
@@ -9,7 +9,7 @@
     <com.miss.imissyou.mycar.ui.TitleFragment
         android:id="@+id/findpassword_title"
         android:layout_width="match_parent"
-        android:layout_height="45dp">
+        android:layout_height="@dimen/title_height">
     </com.miss.imissyou.mycar.ui.TitleFragment>
 
     <!--登录页面-->
