--- a/app/src/main/res/layout/activity_input_barnd_page.xml
+++ b/app/src/main/res/layout/activity_input_barnd_page.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <!--输入车牌号的页面-->
+
+    <com.miss.imissyou.mycar.ui.TitleFragment
+        android:id="@+id/input_barnd_page_title"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/title_height"/>
 
     <EditText
         android:id="@+id/input_add_brand_input"
