--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -11,7 +11,7 @@
     <com.miss.imissyou.mycar.ui.TitleFragment
         android:id="@+id/message_title"
         android:layout_width="match_parent"
-        android:layout_height="45dp">
+        android:layout_height="@dimen/title_height">
     </com.miss.imissyou.mycar.ui.TitleFragment>
 
     <!--加载页面-->
@@ -23,6 +23,11 @@
         circleprogress:color2="@android:color/holo_green_light"
         circleprogress:color3="@android:color/holo_blue_light"
         android:layout_height="wrap_content" />
+
+    <FrameLayout
+        android:id="@+id/message_over"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
     <!--消息页面-->
     <com.miss.imissyou.mycar.ui.MissSwipDismissListView
