--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -7,7 +7,7 @@
     <com.miss.imissyou.mycar.ui.TitleFragment
         android:id="@+id/stting_title"
         android:layout_width="match_parent"
-        android:layout_height="45dp">
+        android:layout_height="@dimen/title_height">
     </com.miss.imissyou.mycar.ui.TitleFragment>
 
     <LinearLayout
