--- a/app/src/main/res/layout/activity_userbase_info.xml
+++ b/app/src/main/res/layout/activity_userbase_info.xml
@@ -8,7 +8,7 @@
     <com.miss.imissyou.mycar.ui.TitleFragment
         android:id="@+id/userBase_info_title"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="@dimen/title_height">
     </com.miss.imissyou.mycar.ui.TitleFragment>
 
     <!--昵称-->
