--- a/app/src/main/res/layout/fragment_user_info.xml
+++ b/app/src/main/res/layout/fragment_user_info.xml
@@ -5,10 +5,9 @@
     android:orientation="vertical">
 
     <FrameLayout
-        android:layout_weight="3"
         android:layout_gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="240dp">
 
         <ImageView
             android:id="@+id/user_info_userhendImage"
