--- a/app/src/main/res/layout/activity_input_barnd_page.xml
+++ b/app/src/main/res/layout/activity_input_barnd_page.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:background="@color/colorWhite"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -11,15 +13,51 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/title_height"/>
 
-    <EditText
-        android:id="@+id/input_add_brand_input"
+    <LinearLayout
+        android:id="@+id/input_barnd_page_Linear"
+        android:layout_below="@+id/input_barnd_page_title"
+        android:orientation="horizontal"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
+        android:background="#eeeeee"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginRight="15dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="40dp"
-        android:hint="车牌号"  />
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:layout_height="70dp">
+
+
+        <com.rey.material.widget.Spinner
+            android:id="@+id/input_brand_page_selectZH"
+            android:gravity="center"
+            android:layout_width="80dp"
+            app:rd_style="@style/Material.Drawable.Ripple.Wave"
+            style="@style/Material.Widget.Spinner"
+            android:layout_height="match_parent"/>
+
+        <com.rey.material.widget.Spinner
+            android:id="@+id/input_barnd_page_SelectEn"
+            android:gravity="center"
+            app:rd_style="@style/Material.Drawable.Ripple.Wave"
+            style="@style/Material.Widget.Spinner"
+            android:layout_marginLeft="10dp"
+            android:layout_width="60dp"
+            android:layout_height="match_parent"/>
+
+        <EditText
+            android:id="@+id/input_add_brand_input"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginRight="15dp"
+            android:layout_marginLeft="15dp"
+            android:textSize="14sp"
+            android:textColor="#000000"
+            android:textColorHint="#bbbbbb"
+            android:hint="五位车牌号"  />
+
+
+    </LinearLayout>
+
+
 
 
     <Button
