--- a/app/src/main/res/layout/fragment_navi.xml
+++ b/app/src/main/res/layout/fragment_navi.xml
@@ -69,7 +69,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/linearLayout"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true" />
 
     <!--导航-->
     <LinearLayout
