--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -5,8 +5,8 @@
     tools:context="yalantis.com.sidemenu.MainActivity">
 
     <item
-        android:id="@+id/action_settings"
-        android:title="设置"
+        android:id="@+id/action_userinfo"
+        android:title="@string/action_setUserInfo"
         android:background="@color/color_carView_mainMesage"
         android:orderInCategory="100"
         app:showAsAction="never"/>
@@ -17,35 +17,26 @@
         android:title="系统消息"
         android:orderInCategory="100"
         app:showAsAction="never"/>
-
-    <item
-        android:id="@+id/action_login"
-        android:title="@string/action_login"
-        android:background="@color/color_carView_mainMesage"
-        android:orderInCategory="100"
-        app:showAsAction="never"/>
     <item
         android:id="@+id/action_about"
         android:title="@string/action_setAbout"
         android:background="@color/color_carView_mainMesage"
         android:orderInCategory="100"
         app:showAsAction="never"/>
-    <item
-        android:id="@+id/action_help"
-        android:title="@string/action_setHelp"
-        android:background="@color/color_carView_mainMesage"
-        android:orderInCategory="100"
-        app:showAsAction="never"/>
-    <item
-        android:id="@+id/action_author"
-        android:title="@string/action_setAuthor"
-        android:background="@color/color_carView_mainMesage"
-        android:orderInCategory="100"
-        app:showAsAction="never"/>
+
     <item
         android:id="@+id/action_unregister"
         android:title="注销"
         android:background="@color/color_carView_mainMesage"
         android:orderInCategory="100"
         app:showAsAction="never"/>
+
+    <item
+        android:id="@+id/action_settings"
+        android:title="设置"
+        android:background="@color/color_carView_mainMesage"
+        android:orderInCategory="100"
+        app:showAsAction="never"/>
+
+
 </menu>
