更换下拉菜单完成

--- a/app/src/main/res/layout/activity_car_and_saft.xml
+++ b/app/src/main/res/layout/activity_car_and_saft.xml
@@ -23,6 +23,7 @@
             android:orientation="horizontal"
             android:paddingTop="3dp"
             android:paddingBottom="3dp"
+            android:background="@color/colorWhite"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:layout_width="match_parent"
@@ -56,13 +57,14 @@
             android:paddingBottom="3dp"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
+            android:background="@color/colorWhite"
             android:layout_width="match_parent"
             android:layout_height="50dp">
             <TextView
                 android:textSize="@dimen/FontSize"
                 android:textStyle="bold"
                 android:textColor="@color/color_back"
-                android:text="当前车辆警报"
+                android:text="当前车辆熄火"
                 android:layout_gravity="center"
                 android:gravity="center|left"
                 android:layout_width="0dp"
@@ -85,6 +87,7 @@
             android:orientation="horizontal"
             android:paddingTop="3dp"
             android:paddingBottom="3dp"
+            android:background="@color/colorWhite"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:layout_width="match_parent"
@@ -93,7 +96,7 @@
                 android:textSize="@dimen/FontSize"
                 android:textStyle="bold"
                 android:textColor="@color/color_back"
-                android:text="只接收未读信息"
+                android:text="启动当前车辆警报"
                 android:layout_gravity="center"
                 android:gravity="center|left"
                 android:layout_width="0dp"
