--- a/app/src/main/res/layout/marker_icon.xml
+++ b/app/src/main/res/layout/marker_icon.xml
@@ -2,20 +2,30 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:miss="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:layout_gravity="center"
+   android:background="#00000000"
     android:layout_width="120dp"
     android:layout_height="150dp">
 
-    <RelativeLayout
-        android:gravity="center|top"
-        android:layout_width="120dp"
-        android:layout_height="150dp">
+    <LinearLayout
+        android:background="@mipmap/ic_location_station_icon"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-        <com.miss.imissyou.mycar.ui.RoundImageView
-            android:id="@+id/marker_round_icon"
-            miss:Radiustype="round"
-            android:layout_marginTop="5dp"
-            android:layout_width="90dp"
-            android:layout_height="90dp" />
-    </RelativeLayout>
+        <RelativeLayout
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="108dp">
+
+            <com.miss.imissyou.mycar.ui.RoundImageView
+                android:id="@+id/marker_round_icon"
+                miss:Radiustype="circle"
+                android:layout_marginTop="5dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp" />
+        </RelativeLayout>
+
+    </LinearLayout>
+
 
 </FrameLayout>
