--- a/app/src/main/res/layout/activity_input_barnd_page.xml
+++ b/app/src/main/res/layout/activity_input_barnd_page.xml
@@ -56,7 +56,8 @@
             android:gravity="center|left"
             android:background="@null"
             android:inputType="number"
-            android:digits="^[A-Za-z0-9]+$"
+            android:maxLength="5"
+            android:digits="0123456789ZXCVBNMASDFGHJKLQWERTYUIOP"
             android:textColor="#000000"
             android:textColorHint="#bbbbbb"
             android:hint="五位车牌号"  />
