--- a/app/src/main/res/layout/marker_icon.xml
+++ b/app/src/main/res/layout/marker_icon.xml
@@ -5,7 +5,7 @@
     android:layout_gravity="center"
    android:background="#00000000"
     android:layout_width="120dp"
-    android:layout_height="150dp">
+    android:layout_height="160dp">
 
     <LinearLayout
         android:background="@mipmap/ic_location_station_icon"
@@ -14,6 +14,8 @@
 
         <RelativeLayout
             android:gravity="center"
+            android:layout_marginTop="8dp"
+            android:padding="10dp"
             android:layout_width="match_parent"
             android:layout_height="108dp">
 
