--- a/app/src/main/res/layout/activity_change_phonenumber.xml
+++ b/app/src/main/res/layout/activity_change_phonenumber.xml
@@ -28,6 +28,7 @@
             android:textColorHint="@color/color_back_gui"
             android:textColor="@color/color_back_gui"
             android:textSize="15sp"
+            android:background="@null"
             android:inputType="phone"
             android:textStyle="bold" />
 
@@ -48,6 +49,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="2"
                 android:hint="输入验证码"
+                android:background="@null"
                 android:textColorHint="@color/color_back_gui"
                 android:textColor="@color/color_back_gui"
                 android:textSize="15sp"
