--- a/app/src/main/res/layout/activity_input_barnd_page.xml
+++ b/app/src/main/res/layout/activity_input_barnd_page.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:background="@color/colorWhite"
+    android:background="@color/color_gui"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -19,7 +19,7 @@
         android:orientation="horizontal"
         android:paddingLeft="15dp"
         android:paddingRight="15dp"
-        android:background="#eeeeee"
+        android:background="#FFFFFF"
         android:layout_width="match_parent"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
