--- a/app/src/main/res/layout/activity_userbase_info.xml
+++ b/app/src/main/res/layout/activity_userbase_info.xml
@@ -89,4 +89,19 @@
         android:background="#eeeeee"
         android:layout_width="match_parent"
         android:layout_height="1dp"/>
+    <View
+        android:background="#eeeeee"
+        android:layout_width="match_parent"
+        android:layout_height="10dp"/>
+
+    <!--注销-->
+    <TextView
+        android:id="@+id/userBase_info_unregister"
+        android:layout_width="match_parent"
+        android:background="@color/colorWhite"
+        android:textSize="16sp"
+        android:text="注销"
+        android:textColor="#000000"
+        android:gravity="center"
+        android:layout_height="50dp"/>
 </LinearLayout>
