--- a/app/src/main/res/layout/fragment_station_map_navi.xml
+++ b/app/src/main/res/layout/fragment_station_map_navi.xml
@@ -21,26 +21,26 @@
         android:layout_height="50dp" />
 
 
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_alignParentBottom="true"
-        android:layout_height="wrap_content">
+    <!--<LinearLayout-->
+        <!--android:orientation="horizontal"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_alignParentBottom="true"-->
+        <!--android:layout_height="wrap_content">-->
 
-        <Button
-            android:id="@+id/station_navi_View_goButton"
-            android:text="到这里去"
-            android:background="@color/login_cardView_background"
-            android:layout_weight="1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <Button
-            android:id="@+id/station_navi_View_BackButton"
-            android:text="从这里回"
-            android:layout_weight="1"
-            android:background="@color/login_cardView_background"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        </LinearLayout>
+        <!--<Button-->
+            <!--android:id="@+id/station_navi_View_goButton"-->
+            <!--android:text="到这里去"-->
+            <!--android:background="@color/login_cardView_background"-->
+            <!--android:layout_weight="1"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content" />-->
+        <!--<Button-->
+            <!--android:id="@+id/station_navi_View_BackButton"-->
+            <!--android:text="从这里回"-->
+            <!--android:layout_weight="1"-->
+            <!--android:background="@color/login_cardView_background"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content" />-->
+        <!--</LinearLayout>-->
 
 </RelativeLayout>
