--- a/app/src/main/res/layout/marker_icon.xml
+++ b/app/src/main/res/layout/marker_icon.xml
@@ -4,27 +4,27 @@
     android:orientation="vertical"
     android:layout_gravity="center"
    android:background="#00000000"
-    android:layout_width="120dp"
-    android:layout_height="160dp">
+    android:layout_width="60dp"
+    android:layout_height="65dp">
 
     <LinearLayout
-        android:background="@mipmap/ic_location_station_icon"
+        android:background="@mipmap/ic_map_station_back_icon"
+        android:gravity="center|top"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <RelativeLayout
             android:gravity="center"
-            android:layout_marginTop="8dp"
-            android:padding="10dp"
+            android:padding="5dp"
             android:layout_width="match_parent"
-            android:layout_height="108dp">
+            android:layout_height="44dp">
 
             <com.miss.imissyou.mycar.ui.RoundImageView
                 android:id="@+id/marker_round_icon"
                 miss:Radiustype="circle"
-                android:layout_marginTop="5dp"
-                android:layout_width="50dp"
-                android:layout_height="50dp" />
+                android:src="@mipmap/ic_map_station_park_icon"
+                android:layout_width="match_parent"
+                android:layout_height="45dp" />
         </RelativeLayout>
 
     </LinearLayout>
