--- a/app/src/main/res/layout/fragment_car_info_change.xml
+++ b/app/src/main/res/layout/fragment_car_info_change.xml
@@ -44,6 +44,7 @@
                     android:src="@mipmap/bz" />
 
                 <LinearLayout
+                    android:layout_weight="1"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="10dp"
@@ -76,6 +77,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
+                        android:gravity="center"
                         android:layout_weight="1"
                         android:orientation="horizontal">
 
@@ -85,12 +87,23 @@
                             android:layout_height="match_parent"
                             android:text="车牌号:  " />
 
-                        <TextView
+                        <EditText
                             android:id="@+id/car_info_change_carPlatNumber_input"
                             style="@style/car_info_input_text"
+                            android:layout_weight="1"
+                            android:background="@null"
+                            android:enabled="false"
                             android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
+                            android:layout_height="wrap_content"
                             android:text="未知" />
+
+
+                        <TextView
+                            android:id="@+id/car_info_carPlatName_input_btn"
+                            android:layout_width="25dp"
+                            android:layout_marginRight="10dp"
+                            android:background="@mipmap/ic_input_edit_icon"
+                            android:layout_height="25dp" />
                     </LinearLayout>
                     <!--发动机号-->
                     <LinearLayout
