--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -67,7 +67,7 @@
                 android:textColor="#0E6C9C"
                 android:layout_marginTop="5dp"
                 android:gravity="center|right"
-                android:text="附近加油站"
+                android:text=""
                 android:layout_marginBottom="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
