--- a/app/src/main/res/layout/fragment_music_list.xml
+++ b/app/src/main/res/layout/fragment_music_list.xml
@@ -9,7 +9,7 @@
     tools:context=".MainActivity">
 
     <ListView
-        android:id="@+id/listview"
+        android:id="@+id/music_list_listview"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:paddingBottom="@dimen/activity_vertical_margin"
@@ -18,7 +18,7 @@
         android:cacheColorHint="#00000000"
         android:background="#eeeeee"
         android:divider="#eeeeee"
-        android:listSelector="#bbbbbb"
+        android:listSelector="#000ff0"
         android:layout_weight="1"/>
 
     <LinearLayout
