--- a/app/src/main/res/layout/fragment_sumbit_indent.xml
+++ b/app/src/main/res/layout/fragment_sumbit_indent.xml
@@ -5,6 +5,11 @@
     android:orientation="vertical"
     android:background="#eeeeee">
 
+    <com.miss.imissyou.mycar.ui.TitleFragment
+        android:id="@+id/sumbitlndent_title"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/title_height"/>
+
     <ScrollView
         android:layout_width="match_parent"
         android:background="#eeeeee"
@@ -60,7 +65,6 @@
                             android:id="@+id/sumbit_gastation_stationType"
                             android:gravity="center"
                             android:layout_weight="2"
-
                             android:padding="5dp"
                             android:text="中石油加油站"
                             android:textSize="14sp"
