可以自由行切换侧边栏了

--- a/app/src/main/res/layout/fragment_sumbit_indent.xml
+++ b/app/src/main/res/layout/fragment_sumbit_indent.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:background="#eeeeee">
 
-    <com.miss.imissyou.mycar.ui.TitleFragment
+    <com.miss.imissyou.mycar.ui.FragmentTitleFragment
         android:id="@+id/sumbitlndent_title"
         android:layout_width="match_parent"
         android:layout_height="@dimen/title_height"/>
