--- a/app/src/main/res/layout/fragment_gasstation.xml
+++ b/app/src/main/res/layout/fragment_gasstation.xml
@@ -4,8 +4,8 @@
     android:layout_height="match_parent">
 
 
-    <com.miss.imissyou.mycar.ui.TitleFragment
-        android:id="@+id/gasStation_title"
+    <com.miss.imissyou.mycar.ui.FragmentTitleFragment
+        android:id="@+id/gasStation_fragment_title"
         android:layout_width="match_parent"
         android:layout_height="@dimen/title_height"/>
     <!--加油站的所有信息-->
