--- a/app/src/main/res/layout/activity_car_and_saft.xml
+++ b/app/src/main/res/layout/activity_car_and_saft.xml
@@ -9,8 +9,6 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/title_height"/>
 
-
-
     <FrameLayout
         android:background="#FFeeeeee"
         android:layout_width="match_parent"
@@ -37,7 +35,7 @@
                     android:textSize="@dimen/FontSize"
                     android:textStyle="bold"
                     android:textColor="@color/color_back"
-                    android:text="启动当前车辆"
+                    android:text="车辆状态(熄火/启动)"
                     android:layout_gravity="center"
                     android:gravity="center|left"
                     android:layout_width="0dp"
@@ -54,37 +52,37 @@
                     android:layout_weight="0.03" />
             </LinearLayout>
 
-            <!--车辆熄火-->
-            <LinearLayout
-                android:layout_marginTop="5dp"
-                android:orientation="horizontal"
-                android:paddingTop="3dp"
-                android:paddingBottom="3dp"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:background="@color/colorWhite"
-                android:layout_width="match_parent"
-                android:layout_height="50dp">
-                <TextView
-                    android:textSize="@dimen/FontSize"
-                    android:textStyle="bold"
-                    android:textColor="@color/color_back"
-                    android:text="当前车辆熄火"
-                    android:layout_gravity="center"
-                    android:gravity="center|left"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="wrap_content" />
-                <com.miss.imissyou.mycar.ui.ToggleButton
-                    android:id="@+id/car_and_saft_stopBtn"
-                    android:layout_gravity="center"
-                    android:paddingTop="12dp"
-                    android:paddingLeft="8dp"
-                    android:paddingRight="8dp"
-                    android:layout_width="@dimen/toggle_btn_width"
-                    android:layout_height="@dimen/toggle_btn_height"
-                    android:layout_weight="0.03" />
-            </LinearLayout>
+            <!--&lt;!&ndash;车辆熄火&ndash;&gt;-->
+            <!--<LinearLayout-->
+                <!--android:layout_marginTop="5dp"-->
+                <!--android:orientation="horizontal"-->
+                <!--android:paddingTop="3dp"-->
+                <!--android:paddingBottom="3dp"-->
+                <!--android:paddingLeft="10dp"-->
+                <!--android:paddingRight="10dp"-->
+                <!--android:background="@color/colorWhite"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="50dp">-->
+                <!--<TextView-->
+                    <!--android:textSize="@dimen/FontSize"-->
+                    <!--android:textStyle="bold"-->
+                    <!--android:textColor="@color/color_back"-->
+                    <!--android:text="当前车辆熄火"-->
+                    <!--android:layout_gravity="center"-->
+                    <!--android:gravity="center|left"-->
+                    <!--android:layout_width="0dp"-->
+                    <!--android:layout_weight="1"-->
+                    <!--android:layout_height="wrap_content" />-->
+                <!--<com.miss.imissyou.mycar.ui.ToggleButton-->
+                    <!--android:id="@+id/car_and_saft_stopBtn"-->
+                    <!--android:layout_gravity="center"-->
+                    <!--android:paddingTop="12dp"-->
+                    <!--android:paddingLeft="8dp"-->
+                    <!--android:paddingRight="8dp"-->
+                    <!--android:layout_width="@dimen/toggle_btn_width"-->
+                    <!--android:layout_height="@dimen/toggle_btn_height"-->
+                    <!--android:layout_weight="0.03" />-->
+            <!--</LinearLayout>-->
 
             <!--车辆警报-->
             <LinearLayout
@@ -101,7 +99,7 @@
                     android:textSize="@dimen/FontSize"
                     android:textStyle="bold"
                     android:textColor="@color/color_back"
-                    android:text="启动当前车辆警报"
+                    android:text="启动车辆警报"
                     android:layout_gravity="center"
                     android:gravity="center|left"
                     android:layout_width="0dp"
