准备添加Jpush信息更改车辆状态

--- a/app/src/main/res/layout/csy_titlebar.xml
+++ b/app/src/main/res/layout/csy_titlebar.xml
@@ -20,8 +20,7 @@
  	    android:gravity="center_vertical"
  	    android:textColor="@android:color/white"
  	    android:textSize="14.0sp"
- 	    android:text="返回"
- 	    android:visibility="gone" />
+ 	    android:text="返回" />
     
     <TextView
         android:id="@+id/txtTitle"
